# rust-cloud-pond

check-supervisor/: Cargo.toml  README.md
check-supervisor/src/: main.rs
check-time-agi-rust/: .env  Cargo.toml
check-time-agi-rust/src/: main.rs
rust-ari-ivr/: Cargo.toml
rust-ari-ivr/config/: config.yaml
rust-ari-ivr/src/: main.rs
rust-asterisk-ami/: Cargo.toml
rust-asterisk-ami/logs/: calllog_20250906.sql  calllog_20250908.sql  calllog_20251104.sql
rust-asterisk-ami/src/: main.rs  main.rs.bak20250906
rust-dialplan/: CONFIG_PATH_CHANGE.md  Cargo.toml  FOLDER_STRUCTURE.md  MANUAL_INSTALL.md  QUICKSTART.md  README.md  config-example.yaml  config.yaml  deploy.sh  install.sh  test-hotreload.sh
rust-dialplan/src/: main.rs
rust-login/: Cargo.toml  check-login-wrapper.sh  test-agi.sh  test-local.sh
rust-login/src/: main.rs
rust-opentab/: Cargo.toml
rust-opentab/src/: main.rs
rust-pushnoti/: .env.example  .env.pushnoti  Cargo.toml  README.md
rust-pushnoti/src/: main.rs
