[package]
name = "asterisk-ivr"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = "0.4"
notify = "6.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
arc-swap = "1.6"
url = "2.5"
mysql = "24"